Edited:job-description and about-us page

--- a/src/views/about-us.jade
+++ b/src/views/about-us.jade
@@ -40,4 +40,6 @@ block content
                 a.btn-link(href="https://www.firstpost.com/tech/news-analysis/startups-stand-to-benefit-most-from-open-source-technologies-by-understanding-it-before-embracing-it-4239439.html", target="_blank") 
                   img.card-img(src='./images/newslink_3@2x.jpg', alt='')
       .btn-wrap
-        a.btn.btn-outline-gray(href="contact-us.html") Contact Us
+        a.btn.btn-gray(href="https://blog.joshsoftware.com/") Contact Us
+        a.btn.btn-outline-gray(href="contact-us.html") Blog
+        
