--- a/src/views/job-description.jade
+++ b/src/views/job-description.jade
@@ -4,7 +4,7 @@ block content
   section.section-description
     .container.bg-white
       .description
-        h2 Software Engineer
+        h2 ROR Developer
         p Experience : 3+ years in ROR
         p.text-left.font-weight-normal Description
         ul.list-unstyled.list-description
