Edited:Technologies Page

--- a/src/views/technologies.jade
+++ b/src/views/technologies.jade
@@ -163,7 +163,7 @@ block content
         #open-source.card.card-expertise
           .card-body
             h2.card-title Open Source
-            img.card-img(src='./images/open-source.png', alt='Open-Source-Logo')
+            img.card-img(src='./images/opensource.png', alt='Open-Source-Logo')
             p.card-text We believe in giving back, we believe in opensource! We always try to encourage, motivate developers to get actively involve into the opensource community and contribute to various projects. Knowing that everyone needs motivation & help to upskill thier work, we always come up with new ideas like Opensource Fridays & codecuriosity.
             .scroll-top
               a.btn-scroll(href='#technologiesTop') go to top
@@ -235,7 +235,7 @@ block content
         #ios.card.card-expertise
           .card-body
             h2.card-title.text-uppercase Ios
-            img.card-img(src='./images/ios.png', alt='IOS-Logo')
+            img.card-img(src='./images/img_ios.png', alt='IOS-Logo')
             p.card-text We are one of the leading iPhone app development companies as we build secure, high performance, and engaging iPhone app solutions. With our knowledge of disrupting technology, tools, industry's best practices and designs, we intent to provide sustainable iPhone and iPad app solutions to our customers.
             .scroll-top
               a.btn-scroll(href='#technologiesTop') go to top
