--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -134,7 +134,6 @@
 .list-client{
   width: 86%;
   margin: 0 auto rem(91px);
-  //margin: rem(0 -12px 91px);
   @extend .d-flex;
   @extend .flex-wrap;
 
@@ -159,7 +158,6 @@
     }
 
     a{
-      //width: rem(192px);
       height: rem(124px);
       @extend .d-flex;
       @extend .justify-content-center;
@@ -261,7 +259,6 @@
 .section-contact {
   background: transparent url("../images/bg-contact.png") no-repeat top center;
   background-size: cover;
-  // min-height: rem(425px);
   height: 70vh;
   padding: rem(142px 0 110px);
 
@@ -351,3 +348,32 @@
     }
   }
 }
+
+// Parallax Scroll SCSS
+.homeSlide{
+  height:100vh;
+}
+
+.bcg {
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: cover;
+	height: 100%;
+  width: 100%;
+}
+
+.hsContainer {
+	display: table;
+	table-layout: fixed;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+	position: relative;
+}
+
+.hsContent {
+	display: table-cell;
+	vertical-align: middle;
+}
+// Parallax Scroll SCSS End
