--- a/src/views/about-us.jade
+++ b/src/views/about-us.jade
@@ -2,7 +2,8 @@ extends ./layouts/bootstrap.jade
 
 block content
   section.section-aboutus.section-banner
-    img.img-fluid.img-banner(src="./images/gift-group-on-banner.png" alt="")
+    .heading-overlay
+      img.img-fluid.img-banner(src="./images/gift-group-on-banner.png" alt="")
   section.section-about_info
     .container
       .row
