--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -3,7 +3,8 @@
   background-color: $white;
   @include flexbox();
   @include align-items(center);
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.06);
+  // box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.06);
+  box-shadow: 0px 0px 69px -23px rgba(0,0,0,0.75);
 
   @include media-breakpoint-down(md) {
     height: rem(54px);
