Edited:Testimonial page

--- a/src/views/testimonial.jade
+++ b/src/views/testimonial.jade
@@ -2,7 +2,7 @@ extends ./layouts/bootstrap.jade
 
 block content
   section.section-testimonial.section-banner
-    h1 Here’s what our clients are saying
+    h1.text-white.section-heading Here’s what our clients are saying
   section.section-testimonial.section-content
     .container
       .card-wrap.-striped.client-testimonial
