--- a/src/views/innovation.jade
+++ b/src/views/innovation.jade
@@ -10,20 +10,16 @@ block content
           li(data-target='#carouselInnovation', data-slide-to='1')
         .carousel-inner
           .carousel-item.active
-            img.img-fluid.d-block(src='./images/innovation-cc.png', alt='First slide')
+            img.img-fluid.img-desktop(src='./images/innovation-cc.png', alt='First slide')
+            img.img-fluid.img-mobile(src='./images/innovation-cc-mobile.png', alt='First slide')
             .info-wrap
                 p.title CodeCuriosity is a platform that encourages contributions to open source. Everyone is rewarded for their efforts, no matter how big or small they are. Our aim is to make open source contribution a habit!
                 p.title We call this our anti-startup. “How to lose money consistently and be proud of it!” :D
           .carousel-item
-            img.img-fluid.d-block(src='./images/innovation-kimaya.png', alt='Second slide')
+            img.img-fluid.img-desktop(src='./images/innovation-kimaya.png', alt='Second slide')
+            img.img-fluid.img-mobile(src='./images/innovation-kimaya-mobile.png', alt='Second slide')
             .info-wrap
                 p.title Kimaya-TPN is a cutting-edge, pilot-tested application, built with the aim of making nutritional calculations fully automated, error free and fast. Kimaya-TPN is being used by KEM-NICU & alike, to do calculations using the Hyperalimentation Worksheet for preparing TPN
-        a.carousel-control-prev(href='#carouselInnovation', role='button', data-slide='prev')
-          span.carousel-control-prev-icon(aria-hidden='true')
-          span.sr-only Previous
-        a.carousel-control-next(href='#carouselInnovation', role='button', data-slide='next')
-          span.carousel-control-next-icon(aria-hidden='true')
-          span.sr-only Next
       .btn-wrap
         a.btn.btn-gray(href="open-source.html") Open Source
         a.btn.btn-outline-gray(href="services.html") Services
