--- a/src/styles/pages/_team.scss
+++ b/src/styles/pages/_team.scss
@@ -183,6 +183,7 @@
     font-weight: 300;
     line-height:rem(22px);
     letter-spacing: 1px;
+    color:#666;
 
     @include media-breakpoint-down(sm){
       font-size:rem(12px);
