Edited:Index Page

--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -34,49 +34,49 @@ block content
       ul.list-unstyled.list-client
         li
           a(href="javascript:void(0);")
-            img.img-fluid(src="./images/pediatric_logo.png", alt="")
+            img.img-fluid(src="../images/clogo-star.jpg", alt="")
         li
           a(href="javascript:void(0);")
-            img.img-fluid(src="./images/brandscope_logo.png", alt="")
+            img.img-fluid(src="../images/clogo-gojek.jpg", alt="")
         li
           a(href="javascript:void(0);")
-            img.img-fluid(src="./images/druva_logo.png", alt="")
+            img.img-fluid(src="./images/clogo-dealsignal.jpg", alt="")
         li
           a(href="javascript:void(0);")
-            img.img-fluid(src="./images/dealsignal_logo.png", alt="")
+            img.img-fluid(src="./images/clogo-brandscope.jpg", alt="")
         li
           a(href="javascript:void(0);")
-            img.img-fluid(src="./images/ffd_logo.png", alt="")
+            img.img-fluid(src="./images/clogo-clubbuzz.jpg", alt="")
         li
           a(href="javascript:void(0);")
-            img.img-fluid(src="./images/ffd_logo.png", alt="")
+            img.img-fluid(src="./images/clogo-cubictree.jpg", alt="")
         li
           a(href="javascript:void(0);")
-            img.img-fluid(src="./images/dealsignal_logo.png", alt="")
+            img.img-fluid(src="./images/clogo-we3.jpg", alt="")
         li
           a(href="javascript:void(0);")
-            img.img-fluid(src="./images/brandscope_logo.png", alt="")
+            img.img-fluid(src="./images/clogo-tpn.jpg", alt="")
         li
           a(href="javascript:void(0);")
-            img.img-fluid(src="./images/pediatric_logo.png", alt="")
+            img.img-fluid(src="./images/clogo-ffd.jpg", alt="")
         li
           a(href="javascript:void(0);")
-            img.img-fluid(src="./images/druva_logo.png", alt="")
+            img.img-fluid(src="./images/clogo-synergy.jpg", alt="")
         li
           a(href="javascript:void(0);")
-            img.img-fluid(src="./images/druva_logo.png", alt="")
+            img.img-fluid(src="./images/clogo-mdny.jpg", alt="")
         li
           a(href="javascript:void(0);")
-            img.img-fluid(src="./images/pediatric_logo.png", alt="")
+            img.img-fluid(src="./images/clogo-fundamentor.jpg", alt="")
         li
           a(href="javascript:void(0);")
-            img.img-fluid(src="./images/ffd_logo.png", alt="")
+            img.img-fluid(src="./images/clogo-skoutdeals.jpg", alt="")
         li
           a(href="javascript:void(0);")
-            img.img-fluid(src="./images/dealsignal_logo.png", alt="")
+            img.img-fluid(src="./images/clogo-druva.jpg", alt="")
         li
           a(href="javascript:void(0);")
-            img.img-fluid(src="./images/brandscope_logo.png", alt="")
+            img.img-fluid(src="./images/clogo-quickinsure.jpg", alt="")
 
       .link-box
         a(href="testimonial.html")
