--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -127,6 +127,7 @@
 
   .section-heading {
     margin: 0 0 rem(72px);
+    color: #666;
   }
 }
 
@@ -164,13 +165,7 @@
       @extend .justify-content-center;
       @extend .align-items-center;
       background-color: $white;
-      text-align: center;
-      padding: rem(8px 16px);
       box-shadow: 0 0 16px 0 rgba(0,0,0,0.08);
-    }
-
-    img{
-      width: rem(134px);
     }
   }
 }
