--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -3,11 +3,16 @@ extends ./layouts/bootstrap.jade
 block content
   section.section-home.section-banner
     .container
-        h2 INNOVATION <br>DISRUPTION
-        p IS THE WAY WE CHANGE
-        h4 THE GAME
+      .overlay-content.-slide1
+        h1.display-4 INNOVATION <br>DISRUPTION
+        h3 IS THE WAY WE CHANGE <br>THE GAME
         a.btn.btn-outline-danger.text-white(href="contact-us.html") Contact us
         p to change yours
+      .overlay-content.-slide2.d-none
+        h1 DISRUPT YOUR INDUSTRY
+        p We partner with industry clients to conceptualize web-based designs, implement long-lasting technological solutions and provide business consultation. We believe in providing the best of industry practices with unique organizational processes and simplified solutions focused on building performance and scale for your business.
+      a.scroll-down.text-white(href="javascript:void(0);")
+        i.icon-angle-double-down
 
   section.section-home.section-expertise
     .container
