--- a/src/views/layouts/parallax-layout.jade
+++ b/src/views/layouts/parallax-layout.jade
@@ -12,6 +12,7 @@ html(lang="en")
       link(rel='icon', href='favicon.ico')
       title Technology Expert Solution Providers in India | Josh Software Private Limited
       link(rel='stylesheet', href="styles/main.css")
+      link(rel='stylesheet', href="styles/animate.css")
       link(href='https://fonts.googleapis.com/css?family=Lato:100,300,400,700', rel='stylesheet')
       //[if lt IE 9]> <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script> <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script> <![endif]
       script(src='https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.1/TweenMax.min.js')
