--- a/src/views/parallax.jade
+++ b/src/views/parallax.jade
@@ -3,7 +3,7 @@ extends ./layouts/parallax-layout.jade
 block content
   #skrollr-body
     section#bannerSlide.section-home.section-overlay.bg-props(style='background-image:url(../images/home-banner.jpg)', data-anchor-target='#bannerSlide')
-      .container
+      .container.overlay-container
         .overlay-content.-slide1.animated.fadeIn
           h1.display-4 INNOVATION <br>DISRUPTION
           h3 IS THE WAY WE CHANGE <br>THE GAME
@@ -11,7 +11,7 @@ block content
           p to change yours
         .overlay-content.-slide2
           h1 DISRUPT YOUR INDUSTRY
-          p We partner with industry clients to conceptualize web-based designs, implement long-lasting technological solutions and provide business consultation. We believe in providing the best of industry practices with unique organizational processes and simplified solutions focused on building performance and scale for your business.
+          p We partner with our clients to conceptualize and create sustainable web-based solutions, enabling high performance and growth in their businesses. We deliver business consultation to simplify technological complexities for better industry practices.
         a.scroll-down.text-white(href="javascript:void(0);", data-top="opacity: 0", data-bottom="opacity: 1")
           i.icon-angle-double-down
     section#expertiseSlide.section-home.section-expertise.bg-props(style='background-image:url(../images/home-industries.jpg)', data-center='background-position: 50% 0px;', data-top-bottom='background-position: 50% -100px;', data-bottom-top='background-position: 50% 0px;', data-anchor-target='#expertiseSlide')
