Navbar menu active state

--- a/src/views/industries.jade
+++ b/src/views/industries.jade
@@ -1,5 +1,8 @@
 extends ./layouts/bootstrap.jade
 
+block vars
+  -var page='Industries'
+
 block content
   section#industriesTop.section-industries.section-banner
     .container
