--- a/src/views/open-source.jade
+++ b/src/views/open-source.jade
@@ -1,5 +1,8 @@
 extends ./layouts/bootstrap.jade
 
+block vars
+  -var page='Open Source'
+
 block content
   section.section-open_source.section-banner
 
