--- a/src/views/technologies.jade
+++ b/src/views/technologies.jade
@@ -1,5 +1,8 @@
 extends ./layouts/bootstrap.jade
 
+block vars
+  -var page='Technologies'
+
 block content
   section#technologiesTop.section-technologies.section-banner
     .container
