--- a/src/views/about-us.jade
+++ b/src/views/about-us.jade
@@ -1,5 +1,8 @@
 extends ./layouts/bootstrap.jade
 
+block vars
+  -var page='About Us'
+
 block content
   section.section-aboutus.section-banner
     .heading-overlay
