--- a/src/views/career.jade
+++ b/src/views/career.jade
@@ -1,5 +1,8 @@
 extends ./layouts/bootstrap.jade
 
+block vars
+  -var page='Career'
+
 block content
   section.section-career.section-banner
     .banner-content
