--- a/src/views/contact-us.jade
+++ b/src/views/contact-us.jade
@@ -1,5 +1,8 @@
 extends ./layouts/bootstrap.jade
 
+block vars
+  -var page='Contact Us'
+
 block content
   section.section-contactus.section-banner
   section.section-contactus
