--- a/src/views/innovation.jade
+++ b/src/views/innovation.jade
@@ -1,5 +1,8 @@
 extends ./layouts/bootstrap.jade
 
+block vars
+  -var page='Innovation'
+
 block content
   section.section-innovation.section-content
     .container
