--- a/src/views/job-apply.jade
+++ b/src/views/job-apply.jade
@@ -1,5 +1,8 @@
 extends ./layouts/bootstrap.jade
 
+block vars
+  -var page='Career'
+
 block content
   section.section-description
     .container.bg-white
