--- a/src/views/services.jade
+++ b/src/views/services.jade
@@ -1,5 +1,8 @@
 extends ./layouts/bootstrap.jade
 
+block vars
+  -var page='Services'
+
 block content
   section.section-services.section-banner
     .container
