--- a/src/views/team.jade
+++ b/src/views/team.jade
@@ -1,5 +1,8 @@
 extends ./layouts/bootstrap.jade
 
+block vars
+  -var page='Our Team'
+
 block content
   section.section-team.section-banner
     .heading-overlay
